add tests and clean code